force-app/main/default/objects/Static_User_Settings__c/Static_User_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Hold user IDs for use in code without query</description>
    <label>Static User Settings</label>
</CustomObject>