force-app/main/default/objects/Static_User_Settings__c/fields/Cybavo_CSM_1__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_CSM_1__c</fullName>
    <label>Cybavo CSM 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>