force-app/main/default/objects/Static_User_Settings__c/fields/Cybavo_CSM_2__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_CSM_2__c</fullName>
    <label>Cybavo CSM 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>