force-app/main/default/objects/Static_User_Settings__c/fields/Default_Lead_Conversion_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Lead_Conversion_Owner__c</fullName>
    <label>Default Lead Conversion Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>