force-app/main/default/objects/Static_User_Settings__c/fields/DRG_Business_Approver_APAC__c.field-meta.xml
<CustomField>
    <fullName>DRG_Business_Approver_APAC__c</fullName>
    <label>DRG Business Approver APAC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>