force-app/main/default/objects/Static_User_Settings__c/fields/Partner_Marketing_User__c.field-meta.xml
<CustomField>
    <fullName>Partner_Marketing_User__c</fullName>
    <label>Partner Marketing User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>