force-app/main/default/objects/Static_User_Settings__c/fields/Unassigned_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Unassigned_User_ID__c</fullName>
    <label>Unassigned User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>